# coscli

./: Makefile  README.md  build.sh  pyproject.toml
src/coscli/: main.py
