[project]
name = "coscli"
version = "0.1.1"
description = "A simple command line tool for managing Tencent Cloud COS (Cloud Object Storage)."
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "cos-python-sdk-v5>=1.9.37",
    "typer>=0.10.0",
]


[project.scripts]
coscli = "coscli.main:app"
